--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.9.1",
+    "@nuxtjs/axios": "^5.10.3",
     "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/toast": "^3.3.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "nuxt": "^2.4.0",
